.helm/templates/db.yaml
apiVersion: v1
kind: Pod
metadata:  
  labels:
    app: django
  name: dbweb
spec:
  containers:         
  - image: postgres:9.6
    name: db
    resources: {}
    ports:
    - containerPort: 5432
    volumeMounts:
    - mountPath: /var/lib/postgresql/data
      name: postgres-data
  
  volumes:
    - name: postgres-data
      persistentVolumeClaim:
        claimName: pvc-db
