.helm/templates/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django    
  name: db
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: django
  sessionAffinity: None
  type: ClusterIP
