.helm/templates/svc-helm.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helmtest
    app.kubernetes.io/managed-by: Helm
  name: helmtest
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8000
  selector:
    app: helmtest
  sessionAffinity: None
  type: ClusterIP
